adding github button

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <audio src="soundEffects/wrong-answer.mp3" id="fail" preload="auto"></audio>
         <div class="letters-guess"></div>
     </div>
+    <div class="github">
+        <a href="https://github.com/Masry2001/slider" class="main-btn" target="_blank">github link</a>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
