--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="letters-guess"></div>
     </div>
     <div class="github">
-        <a href="https://github.com/Masry2001/slider" class="main-btn" target="_blank">github link</a>
+        <a href="https://github.com/Masry2001/hangmanGame" class="main-btn" target="_blank">github link</a>
     </div>
     <script src="main.js"></script>
 </body>
